Replace svg links. Fix issue with icon visibility for project cards

--- a/src/routes/portfolio/project-card/project.styles.scss
+++ b/src/routes/portfolio/project-card/project.styles.scss
@@ -113,6 +113,14 @@ $buttonTransitionTime: 0.1s;
         align-items: center;
         justify-content: flex-end;
 
+        background: rgba(255, 255, 255, 0.182);
+        backdrop-filter: blur(6px);
+        -webkit-backdrop-filter: blur(6px);
+
+        padding: 4px 8px;
+        border-radius: 8px;
+        border: 1px solid rgba(255, 255, 255, 0.12);
+
         .tech-icon {
           pointer-events: auto;
           height: 1.6em;
